--- a/_posts/2022-07-25-C++ tricks.md
+++ b/_posts/2022-07-25-C++ tricks.md
@@ -49,3 +49,65 @@ void hot_code() {
 
 实际上是一个链接规范。在使用C++编译器，需要使用C头文件时使用，编译器将其编译成C++ ABI，以供链接器链接。
 
+## decltype(auto)
+
+Typically its use is to **allow `auto` declarations to use the `decltype` rules on the given expression**.
+
+#### 返回类型转发:
+
+在non-generic代码中，可以自行选择将引用作为返回类型：
+
+```C++
+auto const& Example(int const& i) {
+	return i;
+}
+```
+
+但是在generic code中，如果希望实现完美转发一个返回类型，而不需要知道这个类型是一个值还是引用，那么需要使用decltype(auto)来实现: 
+
+```C++
+tempate <class Fun, class... Args> 
+decltype(auto) Example(Fun fun, Args&&... args) {
+    return fun(std::forward<Args>(args)...);
+}
+```
+
+#### 延迟嵌套模板中的返回类型推导
+
+```C++
+template <int i>
+struct Int{};
+
+constexpr auto iter(Int<0>) -> Int<0>;
+
+template<int i>
+constexpr auto iter(<Int<i>) -> decltype(auto)
+{return iter(Int<i - 1>{})}
+
+int main() {decltype(iter(Int<10>{}))a;}
+```
+
+```
+decltype(i)：返回i的类型
+decltype((i)): 返回i的引用类型
+```
+
+decltype(auto)和auto作为返回类型的区别：
+
+| expression | auto | decltype(auto) |
+| ---------- | ---- | -------------- |
+| 10         | int  | int            |
+| xx         | int  | int            |
+| (x)        | int  | int&           |
+| f()        | int  | int &&         |
+
+*我的一些不成熟的想法: auto类型推导似乎只能推导出来值类型，而decltype(auto)可以推导出左值引用、右值引用，因此在不想区分参数是引用类型还是值类型时，适合用decltype(auto)，而在只想要值类型时，可以直接使用auto*
+
+### reference：
+
+[1][c++ - What is the difference between auto and decltype(auto) when returning from a function? - Stack Overflow](https://stackoverflow.com/questions/21369113/what-is-the-difference-between-auto-and-decltypeauto-when-returning-from-a-fun)
+
+2([c++ - What are some uses of decltype(auto)? - Stack Overflow](https://stackoverflow.com/questions/24109737/what-are-some-uses-of-decltypeauto))
+
+
+
