--- a/_posts/2022-07-25-C++ tricks.md
+++ b/_posts/2022-07-25-C++ tricks.md
@@ -109,5 +109,9 @@ decltype(auto)和auto作为返回类型的区别：
 
 2([c++ - What are some uses of decltype(auto)? - Stack Overflow](https://stackoverflow.com/questions/24109737/what-are-some-uses-of-decltypeauto))
 
+## unordered_map.emplace
 
+返回一个pair，第一个元素是迭代器，第二个元素是布尔值
+
+如果发生了插入，则布尔值为true，迭代器指向新插入的元素，如果没有发生插入，则布尔值为false，迭代器指向已经存在的元素。
 
