--- a/_posts/2022-07-25-C++ tricks.md
+++ b/_posts/2022-07-25-C++ tricks.md
@@ -1,9 +1,9 @@
 ---
 declare: true
-title: C++ tricks
-categories: [C++]
+title: C/C++ tricks
+categories: [C/C++]
 tags:
-- C++ 
+- C++ C
 ---
 
 > 记录coding or reading时遇到的一些有趣的C++ tricks.
@@ -44,6 +44,10 @@ void hot_code() {
 此时将会产生巨大的可执行文件，较长的编译时间和更差的cache局部性。
 
 使用`__attribute__((flatten))`进行替代，编译器将会在合适的地方选择内联而在其他地方保持原样，从而尽可能避免inline的缺点。
+
+## __attribute__((constructor)) & __attribute__((destructor))
+
+GNU C的feature，constructor用于在main函数之前调用被该标记修饰的函数，destructor用于在main函数返回或调用exit后调用被destructor修饰的函数，用于初始化程序数据。
 
 ## extern "C"
 
