--- a/_posts/2022-08-26-SSA.md
+++ b/_posts/2022-08-26-SSA.md
@@ -1,7 +1,7 @@
 ---
 declare: true
 title: Static single-assignment form (SSA)
-categories: [LLVM, Compiler, 程序分析]
+categories: [LLVM]
 tags:
 - LLVM 
 - 编译原理
