--- a/_posts/2022-09-15-EasyMD5.md
+++ b/_posts/2022-09-15-EasyMD5.md
@@ -23,7 +23,7 @@ md5函数的用法：
 | raw    | 可选，raw为true，16位二进制形式；raw为false，32位二进制形式 |
 |        |                                                             |
 
-根据SQL注入的经验，只要md5的返回值为'xxx' or '1xxxxx'*（根据MySQL规则，只要以数字开头，返回值就为true，并且纯数字不需要使用引号）*，就可以使返回值为true。存在一个最常用的pass:**ffifdyop**，其对应的32位md5码为`276f722736c95d99e921722cf9ed621c`，转换为ASCII编码后为`'or'6É]é!r,ùíb`，（*Mysql将hex编码转换为ASCII处理*）因此输入ffifdyop后条件判断为true，跳转到新的页面：
+根据SQL注入的经验，只要md5的返回值为'xxx' or '1xxxxx'*（根据MySQL规则，只要以数字开头，返回值就为true，并且纯数字不需要使用引号）*，就可以使返回值为true。存在一个最常用的pass:**ffifdyop**，其对应的32位md5码为`276f722736c95d99e921722cf9ed621c`，转换为ASCII编码后为`'or'6<trash>`*(<trash>为乱码），（*Mysql将hex编码转换为ASCII处理*）因此输入ffifdyop后条件判断为true，跳转到新的页面：
 
 ![image-20220915184639309.png](https://s2.loli.net/2022/09/15/7B1pGaKgRnt2khv.png)
 
