--- a/_posts/2023-03-03-Linux 内核与模块数据交互方式总结.md
+++ b/_posts/2023-03-03-Linux 内核与模块数据交互方式总结.md
@@ -1,8 +1,9 @@
 ---
 declare: true
 title: Linux内核与模块数据交互方式总结
-categories: [Linux]
+categories: [operating system, Linux]
 tags:
+- operating system
 - Linux
 ---
 
