--- a/_posts/2022-10-21-vm-ft.md
+++ b/_posts/2022-10-21-vm-ft.md
@@ -1,7 +1,7 @@
 ---
 declare: true
 title: The Design of a Practical System for Fault-Tolerant Virtual Machines
-categories: [Distributed Systems, 论文阅读]
+categories: [论文阅读, Distributed Systems]
 tags:
 - Distributed Systems
 - 论文阅读
