--- a/_posts/2022-07-25-C++ tricks.md
+++ b/_posts/2022-07-25-C++ tricks.md
@@ -1,9 +1,9 @@
 ---
 declare: true
 title: C++ tricks
-categories: [C]
+categories: [C/C++]
 tags:
-- C
+- C/C++
 ---
 
 > 记录coding or reading时遇到的一些有趣的C++ tricks.
